--- a/home.html
+++ b/home.html
@@ -69,7 +69,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="page2.html">
+                    <a class="nav-link link text-white display-4" href="services.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Services
                     </a>
@@ -96,9 +96,9 @@
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2">The Future of Claims Investigations<br></h1>
-                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">EDR Tool (CrashScan App), Reporting &amp; Engineering Support</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">CrashScan EDR Tool, Claims Reports &amp; Engineering Support</h3>
                 
-                <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="page2.html" target="_blank"><span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>LEARN MORE</a> <a class="btn btn-md btn-white-outline display-4" href="https://collisionsciences.ca/reports/check_support/" target="_blank"><span class="mbri-info mbr-iconfont mbr-iconfont-btn"></span>VEHICLE SUPPORT</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="services.html"><span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>LEARN MORE</a> <a class="btn btn-md btn-white-outline display-4" href="https://collisionsciences.ca/reports/check_support/" target="_blank"><span class="mbri-info mbr-iconfont mbr-iconfont-btn"></span>VEHICLE SUPPORT</a></div>
             </div>
         </div>
     </div>
