--- a/services.html
+++ b/services.html
@@ -279,7 +279,7 @@ liability, actuarial studies,
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2">Professional EDR Scan Tool &amp; PDF Accident Reports<br></h1>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Performing collision investigations? &nbsp;<br>You need our CrashScan® app and an <a href="https://www.amazon.com/OBDLink-Android-Windows-Professional-Grade-Performance/dp/B07JFRFJG6/ref=sr_1_6?ie=UTF8&qid=1541797661&sr=8-6&keywords=obdlink+mx%2B" target="_blank" class="text-success">OBDLink MX+</a>,&nbsp;period.<br></p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">Performing collision investigations? &nbsp;<br>You need our CrashScan® app and an <a href="EDR-kit.html" target="_blank" class="text-success">EDR Kit</a>,&nbsp;period.<br></p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://play.google.com/store/apps/details?id=ca.collisionsciences.crashscan&rdid=ca.collisionsciences.crashscan" target="_blank"><span class="socicon socicon-android mbr-iconfont mbr-iconfont-btn"></span>ANDROID</a>
                     <a class="btn btn-md btn-white-outline display-4" href="https://apps.apple.com/us/app/crashscan-accident-detector/id1360629269" target="_blank"><span class="socicon socicon-apple mbr-iconfont mbr-iconfont-btn"></span>iOS APP</a></div>
             </div>
@@ -317,7 +317,7 @@ liability, actuarial studies,
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
                     Sample Reports</h5>
-                <p class="mbr-text"><a href="assets/files/Sample%20Claims%20Report%20&%20Bosch%20CDR%20Report%20-%202017%20RAM%201500.pdf" class="text-white" target="_blank">EDR Report Comparison</a>&nbsp;<br><a href="assets/files/Sample Claims Report - 2016 BMW 328i - imperial (US version).pdf" target="_blank" class="text-white">Accident Claims Report</a></p>
+                <p class="mbr-text"><a href="assets/files/CSI-Claims%20Report%20-%20WDDLJ7GB7FA157897_ACM%202015%20Mercedes-Benz%20CLS-Class.pdf" class="text-white"></a><a href="assets/files/%5BCase%20CS-00564%5D%2020190620%20Claims%202018%20Volkswagen%20Atlas%20-%20US%20imperial%20Sample.pdf" target="_blank" class="text-white">EDR Claims Report (Sample 1)&nbsp;</a><br><a href="assets/files/Sample Claims Report - 2016 BMW 328i - imperial (US version).pdf" target="_blank" class="text-white"></a><a href="assets/files/%5BCase%20CS-00564%5D%2020190620%20Claims%202018%20Volkswagen%20Atlas%20-%20US%20imperial%20Sample.pdf" target="_blank" class="text-white"></a><a href="assets/files/%5BCase%20CS-00389%5D%2020190517%20Claims%202015%20Jeep%20Compass.pdf" target="_blank" class="text-white">EDR&nbsp;Claims Report&nbsp;(Sample 2)</a></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
@@ -341,7 +341,7 @@ liability, actuarial studies,
             <div class="media-container-row mbr-white">
                 <div class="col-sm-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright 2015-2019 Collision Sciences - All Rights Reserved
+                        © Copyright 2015-2020 Collision Sciences - All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
