--- a/services.html
+++ b/services.html
@@ -279,7 +279,7 @@ liability, actuarial studies,
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2">Professional EDR Scan Tool &amp; PDF Accident Reports<br></h1>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Performing collision investigations? &nbsp;<br>You need our CrashScan® app and an <a href="EDR-kit.html" target="_blank" class="text-success">EDR Kit</a>,&nbsp;period.<br></p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">Performing collision investigations? &nbsp;<br>You need our CrashScan® app and an EDR Kit,&nbsp;period.<br></p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://play.google.com/store/apps/details?id=ca.collisionsciences.crashscan&rdid=ca.collisionsciences.crashscan" target="_blank"><span class="socicon socicon-android mbr-iconfont mbr-iconfont-btn"></span>ANDROID</a>
                     <a class="btn btn-md btn-white-outline display-4" href="https://apps.apple.com/us/app/crashscan-accident-detector/id1360629269" target="_blank"><span class="socicon socicon-apple mbr-iconfont mbr-iconfont-btn"></span>iOS APP</a></div>
             </div>
