--- a/services.html
+++ b/services.html
@@ -380,7 +380,7 @@ liability, actuarial studies,
   <script async src="assets/parallax/jarallax.min.js"></script>
   <script async src="assets/theme/js/script.js"></script>
   
-  
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
   </body>
