--- a/home.html
+++ b/home.html
@@ -5,25 +5,29 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:image:src" content="">
+  <meta property="og:image" content="">
+  <meta name="twitter:title" content="Collision Sciences - Information Intelligence & Innovation Technology">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/collision-sciences-logo-larger-canvas-3.png" type="image/x-icon">
   <meta name="description" content="Collision Sciences Inc. (CSI) is a global technology and information provider that enables insurance carriers and corporations significant financial and operational benefits through scaled access and intelligent application of vehicle accident data, including "black box" pre-crash data, biomechanical injury severity data, diagnostic repair data, and reconstructed motor incident data.  CSI offers a universal, mobile-app-based EDR (Event Data Recorder) tool, and is the only market option that offers affordable hardware, included user training, dedicated client centric data collection, customizable cloud data analysis, strategic alerting and reporting, and engineering tech support for users.">
   
+  
   <title>Collision Sciences - Information Intelligence & Innovation Technology</title>
-  <link rel="preload" as="style" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
-<link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap.min.css">
-<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap-grid.min.css">
-<link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
-  <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-<link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/web/assets/gdpr-plugin/gdpr-styles.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/gdpr-plugin/gdpr-styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="preload" href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,600,700,800,900,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,600,700,800,900,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  
   
   
   <meta http-equiv="Content-Security-Policy" content="
@@ -33,7 +37,7 @@ script-src 'self' www.google-analytics.com ajax.googleapis.com>
 </head>
 <body>
 
-<!-- Google Analytics -->
+<!-- Analytics -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-28NZV9KTP8"></script>
 <script>
@@ -44,9 +48,10 @@ script-src 'self' www.google-analytics.com ajax.googleapis.com>
   gtag('config', 'G-28NZV9KTP8');
 </script>
 
-<!-- /Google Analytics -->
+<!-- /Analytics -->
 
 
+  
   <section class="menu cid-rkfgnLsn7z" once="menu" id="menu1-6">
 
     
@@ -109,17 +114,18 @@ script-src 'self' www.google-analytics.com ajax.googleapis.com>
 </section>
 
 
+<script src="assets/popper/popper.min.js"></script>
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
-  <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script async src="assets/tether/tether.min.js"></script>
-  <script async src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script async src="assets/parallax/jarallax.min.js"></script>
-  <script async src="assets/viewportchecker/jquery.viewportchecker.js"></script>
-  <script async src="assets/dropdown/js/nav-dropdown.js"></script>
-  <script async src="assets/dropdown/js/navbar-dropdown.js"></script>
-  <script async src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script async src="assets/theme/js/script.js"></script>
+  <script src="assets/tether/tether.min.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
+  <script src="assets/dropdown/js/nav-dropdown.js"></script>
+  <script src="assets/dropdown/js/navbar-dropdown.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/theme/js/script.js"></script>
+  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
