--- a/aboutus.html
+++ b/aboutus.html
@@ -188,13 +188,13 @@
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
                     Sample Reports</h5>
-                <p class="mbr-text"><a href="assets/files/CSI-Claims%20Report%20-%20WDDLJ7GB7FA157897_ACM%202015%20Mercedes-Benz%20CLS-Class.pdf" class="text-white"></a><a href="assets/files/%5BCase%20CS-00564%5D%2020190620%20Claims%202018%20Volkswagen%20Atlas%20-%20US%20imperial%20Sample.pdf" target="_blank" class="text-white">EDR Claims Report (Sample 1)&nbsp;</a><br><a href="assets/files/Sample Claims Report - 2016 BMW 328i - imperial (US version).pdf" target="_blank" class="text-white"></a><a href="assets/files/%5BCase%20CS-00564%5D%2020190620%20Claims%202018%20Volkswagen%20Atlas%20-%20US%20imperial%20Sample.pdf" target="_blank" class="text-white"></a><a href="assets/files/%5BCase%20CS-00389%5D%2020190517%20Claims%202015%20Jeep%20Compass.pdf" target="_blank" class="text-white">EDR&nbsp;Claims Report&nbsp;(Sample 2)</a></p>
+                <p class="mbr-text"><a href="assets/files/CSI-Claims%20Report%20-%20WDDLJ7GB7FA157897_ACM%202015%20Mercedes-Benz%20CLS-Class.pdf" class="text-white"></a><a href="assets/files/[Case CS-01068] 20210909 CL 2013 Nissan Sentra [Contextual Data Version].pdf" target="_blank" class="text-white text-primary">EDR Claims Report (Sample 1)&nbsp;</a><br><a href="assets/files/Sample Claims Report - 2016 BMW 328i - imperial (US version).pdf" target="_blank" class="text-white"></a><a href="assets/files/%5BCase%20CS-00564%5D%2020190620%20Claims%202018%20Volkswagen%20Atlas%20-%20US%20imperial%20Sample.pdf" target="_blank" class="text-white"></a><a href="assets/files/[Case CS-01068] 20210909 CL 2013 Nissan Sentra [Contextual Data & Analysis Version].pdf" target="_blank" class="text-white text-primary">EDR&nbsp;Claims Report&nbsp;(Sample 2)</a></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
                     Contacts
                 </h5>
-                <p class="mbr-text"><a href="mailto:service@collisionsciences.ca" class="text-white">service@collisionsciences.ca</a>&nbsp;<br>support@collisionsciences.ca&nbsp;&nbsp;<br></p>
+                <p class="mbr-text"><a href="mailto:service@collisionsciences.ca" class="text-white text-primary">service@collisionsciences.ca</a>&nbsp;<br><a href="mailto:support@collisionsciences.ca" class="text-white">support@collisionsciences.ca&nbsp;</a>&nbsp;<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
