--- a/services.html
+++ b/services.html
@@ -129,7 +129,7 @@
                 
                 <h3 class="mbr-section-subtitle align-left mbr-light mbr-white pb-3 mbr-fonts-style display-5">InsurTech: Innovative EDR Technology &amp; Data Science</h3>
                 <p class="mbr-text align-left mbr-white mbr-fonts-style display-7">CrashScan is a universal, mobile-app-based EDR (Event Data Recorder) solution, and is the only "vehicle black box" market option that offers affordable hardware, included user training, dedicated client centric data collection, customizable cloud data analysis, strategic alerting and reporting, and engineering tech support for users. &nbsp;&nbsp;<br></p>
-                <div class="mbr-section-btn align-left py-4"><a class="btn btn-primary display-4" href="https://collisionsciences.ca/reports/check_support/" target="_blank">EDR VEHICLE SUPPORT</a></div>
+                <div class="mbr-section-btn align-left py-4"><a class="btn btn-primary display-4" href="https://secure.collisionsciences.ca/info/check_support" target="_blank">EDR VEHICLE SUPPORT</a></div>
             </div>
         </div>
     </div>
@@ -307,7 +307,7 @@ liability, actuarial studies,
     </figure>
 </section>
 
-<section class="cid-rD0pXiE7qD mbr-reveal mbr-parallax-background" id="footer1-n">
+<section class="cid-t86xxkMoTD mbr-reveal mbr-parallax-background" id="footer1-p">
 
     
 
@@ -318,20 +318,20 @@ liability, actuarial studies,
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="#">
-                        <img src="assets/images/crashscan-app-3.jpg" alt="" title="">
+                        <img src="assets/images/crashscan-app-4.jpg" alt="" title="">
                     </a>
                 </div>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
                     Sample Reports</h5>
-                <p class="mbr-text"><a href="assets/files/%5BCase%20CS-01068%5D%2020210909%20CL%202013%20Nissan%20Sentra%20%5BContextual%20Data%20&%20Analysis%20Version%5D.pdf" class="text-white">EDR Claims Report (Sample 1)&nbsp;</a><br><a href="assets/files/%5BCase%20CS-01068%5D%2020210909%20CL%202013%20Nissan%20Sentra%20%5BContextual%20Data%20&%20Analysis%20Version%5D.pdf" class="text-white">EDR&nbsp;Claims Report&nbsp;(Sample 2)</a></p>
+                <p class="mbr-text"><a href="assets/files/CSI-Claims%20Report%20-%20WDDLJ7GB7FA157897_ACM%202015%20Mercedes-Benz%20CLS-Class.pdf" class="text-white"></a><a href="assets/files/[Case CS-01068] 20210909 CL 2013 Nissan Sentra [Contextual Data Version].pdf" target="_blank" class="text-white text-primary">EDR Claims Report (Sample 1)&nbsp;</a><br><a href="assets/files/Sample Claims Report - 2016 BMW 328i - imperial (US version).pdf" target="_blank" class="text-white"></a><a href="assets/files/%5BCase%20CS-00564%5D%2020190620%20Claims%202018%20Volkswagen%20Atlas%20-%20US%20imperial%20Sample.pdf" target="_blank" class="text-white"></a><a href="assets/files/[Case CS-01068] 20210909 CL 2013 Nissan Sentra [Contextual Data & Analysis Version].pdf" target="_blank" class="text-white text-primary">EDR&nbsp;Claims Report&nbsp;(Sample 2)</a></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
                     Contacts
                 </h5>
-                <p class="mbr-text">service@collisionsciences.ca support@collisionsciences.ca</p><p></p><p></p>
+                <p class="mbr-text"><a href="mailto:service@collisionsciences.ca" class="text-white text-primary">service@collisionsciences.ca</a>&nbsp;<br><a href="mailto:support@collisionsciences.ca" class="text-white">support@collisionsciences.ca&nbsp;</a>&nbsp;<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
